# live-ascii

./: .gitignore  Cargo.toml  README.md  build.rs
src/: context.rs  controller.rs  effect.rs  exp.rs  expression.rs  ffi.rs  geometry.rs  lib.rs  main.rs  model.rs  model_setting.rs  motion.rs  physics.rs  receiver.rs  renderer.rs  shader.rs  tracker.rs  ui.rs  utils.rs
src/effect/: eye_blink.rs  pose.rs
src/expression/: exp.rs  expression_manager.rs  json.rs  manager.rs
src/live/: json.rs
src/motion/: amotion.rs  json.rs  manager.rs  motion_player.rs  player.rs  queue.rs
src/physics/: json.rs
src/ui/: popup.rs
test_file/: test.exp3.json  test.live.json  test.model3.json  test.motion3.json  test.physics3.json  test.pose3.json
