[package]
name = "live-ascii"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
image = "0.25.10"
libc = "0.2"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
dotenvy = "0.15.7"

[features] 
default = ["debug"]
debug = ["tracker_debug"]
tracker_debug = []
